clippy_final_hyper_2.log
warning: /app/crates/auth-platform/Cargo.toml: file `/app/crates/auth-platform/src/lib.rs` found to be present in multiple build targets:
  * `lib` target `auth_platform`
  * `integration-test` target `lib`
    Checking auth-core v0.1.0 (/app/crates/auth-core)
    Checking auth-config v0.1.0 (/app/crates/auth-config)
warning: unused variable: `authority`
   --> crates/auth-platform/src/port_authority.rs:353:13
    |
353 |         let authority = PortAuthority::with_lease_dir(temp_dir.path().to_path_buf()).unwrap();
    |             ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_authority`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: `auth-platform` (test "lib") generated 1 warning (run `cargo clippy --fix --test "lib" -p auth-platform` to apply 1 suggestion)
    Checking auth-platform v0.1.0 (/app/crates/auth-platform)
error[E0063]: missing fields `drain_timeout_seconds` and `port_policy` in initializer of `config::ServerConfig`
   --> crates/auth-config/src/manager.rs:152:17
    |
152 |                 ServerConfig {
    |                 ^^^^^^^^^^^^ missing `drain_timeout_seconds` and `port_policy`

For more information about this error, try `rustc --explain E0063`.
error: could not compile `auth-config` (lib test) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
warning: `auth-platform` (lib test) generated 1 warning (1 duplicate)
warning: redundant pattern matching, consider using `is_some()`
  --> crates/auth-core/src/services/role_service.rs:27:16
   |
27 |         if let Some(_) = self.store.find_by_name(tenant_id, &req.name).await? {
   |         -------^^^^^^^------------------------------------------------------- help: try: `if (self.store.find_by_name(tenant_id, &req.name).await?).is_some()`
   |
   = note: this will change drop order of the result, as well as all temporaries
   = note: add `#[allow(clippy::redundant_pattern_matching)]` if this is important
   = help: for further information visit https://rust-lang.github.io/rust-clippy/rust-1.92.0/index.html#redundant_pattern_matching
   = note: `#[warn(clippy::redundant_pattern_matching)]` on by default

warning: this function has too many arguments (9/7)
   --> crates/auth-core/src/services/otp_service.rs:171:5
    |
171 | /     pub fn create_session(
172 | |         &self,
173 | |         tenant_id: Uuid,
174 | |         identifier: String,
...   |
180 | |         ttl_minutes: Option<i64>,
181 | |     ) -> Result<(OtpSession, String), OtpError> {
    | |_______________________________________________^
    |
    = help: for further information visit https://rust-lang.github.io/rust-clippy/rust-1.92.0/index.html#too_many_arguments
    = note: `#[warn(clippy::too_many_arguments)]` on by default

warning: you should consider adding a `Default` implementation for `WorkflowEngine`
  --> crates/auth-core/src/services/workflow/engine.rs:59:5
   |
59 | /     pub fn new() -> Self {
60 | |         Self {
61 | |             handlers: HashMap::new(),
62 | |         }
63 | |     }
   | |_____^
   |
   = help: for further information visit https://rust-lang.github.io/rust-clippy/rust-1.92.0/index.html#new_without_default
   = note: `#[warn(clippy::new_without_default)]` on by default
help: try adding this
   |
58 + impl Default for WorkflowEngine {
59 +     fn default() -> Self {
60 +         Self::new()
61 +     }
62 + }
   |

warning: you should consider adding a `Default` implementation for `RuleEngine`
  --> crates/auth-core/src/services/workflow/rules.rs:13:5
   |
13 | /     pub fn new() -> Self {
14 | |         Self { rules: Vec::new() }
15 | |     }
   | |_____^
   |
   = help: for further information visit https://rust-lang.github.io/rust-clippy/rust-1.92.0/index.html#new_without_default
help: try adding this
   |
12 + impl Default for RuleEngine {
13 +     fn default() -> Self {
14 +         Self::new()
15 +     }
16 + }
   |

warning: `auth-core` (lib test) generated 4 warnings (2 duplicates)
warning: `auth-core` (lib) generated 4 warnings (2 duplicates) (run `cargo clippy --fix --lib -p auth-core` to apply 2 suggestions)
